# md2ppt

./: main.py  pyproject.toml  雷军演讲2024.pptx
md2ppt/: create_ppt.py  create_ppt2.py  createjsonppt.py  json2ppt.json  markdown2json.py  ppt2.json
pptSource/ppt/: WEB前端开发技能-673YRb.pptx  WEB前端开发技能-AitM9x.pptx  WEB前端开发技能-AxpQTL.pptx  WEB前端开发技能-MP8T0b.pptx  WEB前端开发技能-W926bi.pptx  WEB前端开发技能-abMeBW.pptx  WEB前端开发技能-eb8jUm.pptx  WEB前端开发技能-hlHxOi.pptx  WEB前端开发技能-iEXRal.pptx  WEB前端开发技能-juhjYs.pptx  WEB前端开发技能-xrMTO7.pptx  WEB前端开发技能qeLrqU.pptx
